# cua

./: Cargo.toml  LICENSE.md  README.md
.github/: ci.yml
.github/workflows/: build_and_publish.yml
src/: main.rs
src/service_helpers/: config.rs  install_service.rs  start.rs  uninstall_service.rs
src/windows_api/: device_info.rs  event_watcher.rs  mod.rs  user_info.rs
wix/: License.rtf  main.wxs
