[package]
name = "cua"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Jordan Gomes"]

[[bin]]
name = "install_service"
path = "src/service_helpers/install_service.rs"

[[bin]]
name = "uninstall_service"
path = "src/service_helpers/uninstall_service.rs"

[[bin]]
name = "start"
path = "src/service_helpers/start.rs"

[dependencies]
bcder = "0.7.6"
bytes = "1.11.1"
windows-registry="0.6.1"
x509-certificate = "0.25.0"
grob = "0.1.3"
uuid = "1.21.0"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version ="0.3.22", features = ["json", "env-filter"] }
serde_json = "1.0.149"
windows-service = "0.8.0"
tokio = { version = "1.49.0", features = ["full"] }
quick-xml = {version = "0.39.2", features = ["serialize"] }
serde = {version = "1.0.228", features = ["derive"] }

[target.'cfg(windows)'.dependencies.windows]
version = "0.62.2"
features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_RemoteDesktop",
    "Win32_Security_Authentication_Identity",
    "Win32_System_Com_Events",
    "Win32_System_EventLog"
]


